<resources>
    <string name="app_name">task master</string>
    <string name="Welcome">Welcome</string>
    <string name="TaskMaster">Task Master</string>
    <string name="addTaskButton">Add a Task</string>
    <string name="pictureOfPatrick">picture of patrick</string>
    <string name="allTasksButton">All Tasks</string>
    <string name="addTaskHeading">Add Task</string>
    <string name="buttonAddTask">Add Task</string>
    <string name="AllTasksHeading">All Tasks</string>
    <string name="allTasksPlaceholderDescription">Place Holder Image</string>
    <string name="taskTitleEditText">Title</string>
    <string name="taskBodyEditText">Body</string>
    <string name="taskDetailsHeading">Task Details</string>
    <string name="taskBodyLorumIpsum">This is where you would put your task body details in for the task you selected.</string>
    <string name="taskTitleLorumIpsum">Task Title Here</string>
    <string name="settingsTitleTextView">Settings</string>
    <string name="userNameTextView">User Name Here</string>
    <string name="taskOneMainTextView">Task One</string>
    <string name="taskTwoMainTextView">Task Two</string>
    <string name="taskThreeMainTextView">Task Three</string>
    <string name="WelcomeUsername">Welcome %1$s</string>
    <string name="saveUserButton">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settingsImageViewContentDescription">settings intent onclick</string>
    <string name="statusTaskDetailsTextView">status here</string>
</resources>