<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTaskActivity"
    android:background="#8303BC15">
    <TextView
        android:id="@+id/AddTaskHeading"
        android:layout_width="228dp"
        android:layout_height="66dp"
        android:text="@string/addTaskHeading"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/taskTitleEditText"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/taskTitleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskHeading" />

    <EditText
        android:id="@+id/taskBodyEditText"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/taskBodyEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskHeading" />

    <Button
        android:id="@+id/submitAddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/buttonAddTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyEditText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/submittedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/submitAddTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toEndOf="@+id/submitAddTaskButton"
        app:layout_constraintTop_toTopOf="@+id/submitAddTaskButton"
        tools:text="Submitted" />

</androidx.constraintlayout.widget.ConstraintLayout>