<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8303BC15"
    tools:context=".activities.TaskDetails">

    <TextView
        android:id="@+id/taskDetailsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskDetailsHeading"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/taskDetailsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/taskTitleLorumIpsum"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/taskDetailsBodyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsHeading"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskDetailsBodyTextView"
        android:layout_width="338dp"
        android:layout_height="222dp"
        android:layout_marginTop="200dp"
        android:text="@string/taskBodyLorumIpsum"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsHeading"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/statusTaskDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/taskDetailsBodyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsTitleTextView"
        app:layout_constraintVertical_bias="0.469"
        tools:text="@string/statusTaskDetailsTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>